--- a/firstsite.com/css/style.css
+++ b/firstsite.com/css/style.css
@@ -1,3 +1,24 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     background-color: lightpink;
+}
+
+header{
+    height: 20vh;
+    background-color: skyblue;
+}
+
+main{
+    height: 70vh;
+    background-color: lightyellow;
+}
+
+footer{
+    height: 10vh;
+    background-color: #65838f;
 }
